finishing website functionality

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,3 @@
 $hero-bg: url(../images/jan-kronies-B7EWcuO6hMA-unsplash.jpg);
+$episodes-bg: url(../images/episodesbg.jpg);
+$about-bg: url(../images/aboutpagebg.jpg);
