--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,7 +3,7 @@
 	margin: 0;
 	box-sizing: border-box;
 	color: white;
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-family: Rubik;
 }
 :root{
   font-size: 3vw;
@@ -34,3 +34,22 @@
     background: linear-gradient(0deg, #FF9B31, #b61b10); 
     border-radius: 10px;
   }
+
+  @import "./variables.scss";
+
+.epimage {
+	background-image: $episodes-bg;
+	background-size: cover;
+}
+
+
+.bgimage{
+	background-image: $hero-bg;
+	background-size: cover;
+	background-position-y: 60%;
+}
+
+.aboutbackground{
+  background-image: $about-bg;
+  background-size: cover;
+}
